[package]
name = "map_editor"
version = "0.1.0"
edition = "2021"
authors = ["Jon Binney <jon.binney@gmail.com>"]

[dependencies]
bevy = { version = "0.9", features=["dynamic"] }
bevy_egui = { version = "0.18" }
bevy_rapier3d = { version = "0.19", features = [ "simd-stable", "debug-render" ] }
rapier3d = { version = "0.16" }

#bevy_rapier3d = { version = "0.19", features = [ "simd-stable", "debug-render" ], path = "../bevy_rapier/bevy_rapier3d" }
